--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -4,6 +4,7 @@
       <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
     <% end %>
 
+    <!-- Render the message partial (which already includes content, room, and user information) -->
     <%= render @message %>
 
     <%= link_to 'Edit this message', edit_message_path(@message), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
@@ -11,5 +12,9 @@
       <%= button_to 'Destroy this message', message_path(@message), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
     </div>
     <%= link_to 'Back to messages', messages_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+
+    <!-- Render the room and user partials -->
+    <%= render "room", room: @room %>
+    <%= render "user" %>
   </div>
 </div>
